--- a/roles/pretix/templates/pretix.cfg.j2
+++ b/roles/pretix/templates/pretix.cfg.j2
@@ -1,5 +1,5 @@
 [pretix]
-instance_name=My pretix installation
+instance_name={{ pretix_instance_name }}
 url={{ pretix_url }}
 currency={{ pretix_currency }}
 ; DO NOT change the following value, it has to be set to the location of the
